crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP001.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP001 [*] `__metaclass__ = type` is implied
 --> UP001.py:2:5
  |
1 | class A:
2 |     __metaclass__ = type
  |     ^^^^^^^^^^^^^^^^^^^^
help: Remove `__metaclass__ = type`
  |
2 -     __metaclass__ = type
2 +     pass
  |

UP001 [*] `__metaclass__ = type` is implied
 --> UP001.py:6:5
  |
5 | class B:
6 |     __metaclass__ = type
  |     ^^^^^^^^^^^^^^^^^^^^
7 |
8 |     def __init__(self) -> None:
  |
help: Remove `__metaclass__ = type`
  |
6 -     __metaclass__ = type
  |
