crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP004.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP004 [*] Class `A` inherits from `object`
 --> UP004.py:5:9
  |
5 | class A(object):
  |         ^^^^^^
6 |     ...
  |
help: Remove `object` inheritance
  |
5 - class A(object):
5 + class A:
  |

UP004 [*] Class `A` inherits from `object`
  --> UP004.py:10:5
   |
 9 | class A(
10 |     object,
   |     ^^^^^^
11 | ):
12 |     ...
   |
help: Remove `object` inheritance
   |
 9 - class A(
10 -     object,
11 - ):
 9 + class A:
   |

UP004 [*] Class `A` inherits from `object`
  --> UP004.py:16:5
   |
15 | class A(
16 |     object,
   |     ^^^^^^
17 |     #
18 | ):
   |
help: Remove `object` inheritance
   |
15 - class A(
16 -     object,
17 -     #
18 - ):
15 + class A:
   |
note: This is an unsafe fix and may change runtime behavior

UP004 [*] Class `A` inherits from `object`
  --> UP004.py:24:5
   |
22 | class A(
23 |     #
24 |     object,
   |     ^^^^^^
25 | ):
26 |     ...
   |
help: Remove `object` inheritance
   |
22 - class A(
23 -     #
24 -     object,
25 - ):
22 + class A:
   |
note: This is an unsafe fix and may change runtime behavior

UP004 [*] Class `A` inherits from `object`
  --> UP004.py:31:5
   |
29 | class A(
30 |     #
31 |     object
   |     ^^^^^^
32 | ):
33 |     ...
   |
help: Remove `object` inheritance
   |
29 - class A(
30 -     #
31 -     object
32 - ):
29 + class A:
   |
note: This is an unsafe fix and may change runtime behavior

UP004 [*] Class `A` inherits from `object`
  --> UP004.py:37:5
   |
36 | class A(
37 |     object
   |     ^^^^^^
38 |     #
39 | ):
   |
help: Remove `object` inheritance
   |
36 - class A(
37 -     object
38 -     #
39 - ):
36 + class A:
   |
note: This is an unsafe fix and may change runtime behavior

UP004 [*] Class `A` inherits from `object`
  --> UP004.py:45:5
   |
43 | class A(
44 |     #
45 |     object,
   |     ^^^^^^
46 |     #
47 | ):
   |
help: Remove `object` inheritance
   |
43 - class A(
44 -     #
45 -     object,
46 -     #
47 - ):
43 + class A:
   |
note: This is an unsafe fix and may change runtime behavior

UP004 [*] Class `A` inherits from `object`
  --> UP004.py:53:5
   |
51 | class A(
52 |     #
53 |     object,
   |     ^^^^^^
54 |     #
55 | ):
   |
help: Remove `object` inheritance
   |
51 - class A(
52 -     #
53 -     object,
54 -     #
55 - ):
51 + class A:
   |
note: This is an unsafe fix and may change runtime behavior

UP004 [*] Class `A` inherits from `object`
  --> UP004.py:61:5
   |
59 | class A(
60 |     #
61 |     object
   |     ^^^^^^
62 |     #
63 | ):
   |
help: Remove `object` inheritance
   |
59 - class A(
60 -     #
61 -     object
62 -     #
63 - ):
59 + class A:
   |
note: This is an unsafe fix and may change runtime behavior

UP004 [*] Class `A` inherits from `object`
  --> UP004.py:69:5
   |
67 | class A(
68 |     #
69 |     object
   |     ^^^^^^
70 |     #
71 | ):
   |
help: Remove `object` inheritance
   |
67 - class A(
68 -     #
69 -     object
70 -     #
71 - ):
67 + class A:
   |
note: This is an unsafe fix and may change runtime behavior

UP004 [*] Class `B` inherits from `object`
  --> UP004.py:75:12
   |
75 | class B(A, object):
   |            ^^^^^^
76 |     ...
   |
help: Remove `object` inheritance
   |
75 - class B(A, object):
75 + class B(A):
   |

UP004 [*] Class `B` inherits from `object`
  --> UP004.py:79:9
   |
79 | class B(object, A):
   |         ^^^^^^
80 |     ...
   |
help: Remove `object` inheritance
   |
79 - class B(object, A):
79 + class B(A):
   |

UP004 [*] Class `B` inherits from `object`
  --> UP004.py:84:5
   |
83 | class B(
84 |     object,
   |     ^^^^^^
85 |     A,
86 | ):
   |
help: Remove `object` inheritance
   |
84 -     object,
   |

UP004 [*] Class `B` inherits from `object`
  --> UP004.py:92:5
   |
90 | class B(
91 |     A,
92 |     object,
   |     ^^^^^^
93 | ):
94 |     ...
   |
help: Remove `object` inheritance
   |
91 -     A,
92 -     object,
91 +     A,
   |

UP004 [*] Class `B` inherits from `object`
   --> UP004.py:98:5
    |
 97 | class B(
 98 |     object,
    |     ^^^^^^
 99 |     # Comment on A.
100 |     A,
    |
help: Remove `object` inheritance
   |
98 -     object,
   |
note: This is an unsafe fix and may change runtime behavior

UP004 [*] Class `B` inherits from `object`
   --> UP004.py:108:5
    |
106 |     # Comment on A.
107 |     A,
108 |     object,
    |     ^^^^^^
109 | ):
110 |     ...
    |
help: Remove `object` inheritance
    |
107 -     A,
108 -     object,
107 +     A,
    |

UP004 [*] Class `A` inherits from `object`
   --> UP004.py:119:5
    |
118 | class A(
119 |     object,
    |     ^^^^^^
120 | ):
121 |     ...
    |
help: Remove `object` inheritance
    |
118 - class A(
119 -     object,
120 - ):
118 + class A:
    |

UP004 [*] Class `A` inherits from `object`
   --> UP004.py:125:5
    |
124 | class A(
125 |     object,  # )
    |     ^^^^^^
126 | ):
127 |     ...
    |
help: Remove `object` inheritance
    |
124 - class A(
125 -     object,  # )
126 - ):
124 + class A:
    |
note: This is an unsafe fix and may change runtime behavior

UP004 [*] Class `A` inherits from `object`
   --> UP004.py:131:5
    |
130 | class A(
131 |     object  # )
    |     ^^^^^^
132 |     ,
133 | ):
    |
help: Remove `object` inheritance
    |
130 - class A(
131 -     object  # )
132 -     ,
133 - ):
130 + class A:
    |
note: This is an unsafe fix and may change runtime behavior

UP004 [*] Class `A` inherits from `object`
   --> UP004.py:137:9
    |
137 | class A(object, object):
    |         ^^^^^^
138 |     ...
    |
help: Remove `object` inheritance
    |
137 - class A(object, object):
137 + class A(object):
    |

UP004 [*] Class `A` inherits from `object`
   --> UP004.py:137:17
    |
137 | class A(object, object):
    |                 ^^^^^^
138 |     ...
    |
help: Remove `object` inheritance
    |
137 - class A(object, object):
137 + class A(object):
    |

UP004 [*] Class `A` inherits from `object`
   --> UP004.py:142:9
    |
141 | @decorator()
142 | class A(object):
    |         ^^^^^^
143 |     ...
    |
help: Remove `object` inheritance
    |
142 - class A(object):
142 + class A:
    |

UP004 [*] Class `A` inherits from `object`
   --> UP004.py:146:9
    |
145 | @decorator()  # class A(object):
146 | class A(object):
    |         ^^^^^^
147 |     ...
    |
help: Remove `object` inheritance
    |
146 - class A(object):
146 + class A:
    |

UP004 [*] Class `Unusual` inherits from `object`
   --> UP004.py:159:15
    |
157 | import builtins
158 |
159 | class Unusual(builtins.object):
    |               ^^^^^^^^^^^^^^^
160 |     ...
    |
help: Remove `object` inheritance
    |
159 - class Unusual(builtins.object):
159 + class Unusual:
    |
