crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP006_1.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP006 [*] Use `collections.defaultdict` instead of `typing.DefaultDict` for type annotation
  --> UP006_1.py:9:10
   |
 9 | def f(x: typing.DefaultDict[str, str]) -> None:
   |          ^^^^^^^^^^^^^^^^^^
10 |     ...
   |
help: Replace with `collections.defaultdict`
  |
6 ~     from collections import defaultdict
7 |
8 |
9 ~ def f(x: defaultdict[str, str]) -> None:
  |
