crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP006_2.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP006 [*] Use `collections.defaultdict` instead of `typing.DefaultDict` for type annotation
 --> UP006_2.py:7:10
  |
7 | def f(x: typing.DefaultDict[str, str]) -> None:
  |          ^^^^^^^^^^^^^^^^^^
8 |     ...
  |
help: Replace with `collections.defaultdict`
  |
4 ~     from collections import defaultdict
5 |
6 |
7 ~ def f(x: defaultdict[str, str]) -> None:
  |
