crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP006_future.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP006 [*] Use `list` instead of `List` for type annotation
 --> UP006_future.py:6:19
  |
6 | def func1(a_list: List[str]) -> None:
  |                   ^^^^
7 |     pass
  |
help: Replace with `list`
1  + from __future__ import annotations
2  | from typing import List
3  | import typing
4  | import typing as t
5  | 
6  | 
   - def func1(a_list: List[str]) -> None:
7  + def func1(a_list: list[str]) -> None:
8  |     pass
9  | 
10 | 

UP006 [*] Use `list` instead of `typing.List` for type annotation
  --> UP006_future.py:10:19
   |
10 | def func2(a_list: typing.List[str]) -> None:
   |                   ^^^^^^^^^^^
11 |     pass
   |
help: Replace with `list`
1  + from __future__ import annotations
2  | from typing import List
3  | import typing
4  | import typing as t
--------------------------------------------------------------------------------
8  |     pass
9  | 
10 | 
   - def func2(a_list: typing.List[str]) -> None:
11 + def func2(a_list: list[str]) -> None:
12 |     pass
13 | 
14 | 

UP006 [*] Use `list` instead of `t.List` for type annotation
  --> UP006_future.py:14:19
   |
14 | def func3(a_list: t.List[str]) -> None:
   |                   ^^^^^^
15 |     pass
   |
help: Replace with `list`
1  + from __future__ import annotations
2  | from typing import List
3  | import typing
4  | import typing as t
--------------------------------------------------------------------------------
12 |     pass
13 | 
14 | 
   - def func3(a_list: t.List[str]) -> None:
15 + def func3(a_list: list[str]) -> None:
16 |     pass
17 | 
18 | 

UP006 [*] Use `list` instead of `List` for type annotation
  --> UP006_future.py:18:14
   |
18 | def func4(_: List[int]) -> None:
   |              ^^^^
19 |     a_list: t.List[str] = []
   |
help: Replace with `list`
1  + from __future__ import annotations
2  | from typing import List
3  | import typing
4  | import typing as t
--------------------------------------------------------------------------------
16 |     pass
17 | 
18 | 
   - def func4(_: List[int]) -> None:
19 + def func4(_: list[int]) -> None:
20 |     a_list: t.List[str] = []

UP006 [*] Use `list` instead of `t.List` for type annotation
  --> UP006_future.py:19:13
   |
18 | def func4(_: List[int]) -> None:
19 |     a_list: t.List[str] = []
   |             ^^^^^^
   |
help: Replace with `list`
1  + from __future__ import annotations
2  | from typing import List
3  | import typing
4  | import typing as t
--------------------------------------------------------------------------------
17 | 
18 | 
19 | def func4(_: List[int]) -> None:
   -     a_list: t.List[str] = []
20 +     a_list: list[str] = []
